# NesEmulator

Solutions/CMake/: CMakeLists.txt
Source/: NesEmulator.cpp  NesEmulator.hpp  main.cpp
Source/Bus/: Bus.cpp  Bus.hpp  IBus.hpp
Source/Common/: Types.hpp
Source/Cpu/: AddressingModes.cpp  AddressingModes.hpp  CpuFlags.hpp  CpuInstruction.hpp  CpuRegisters.hpp  ICpu.hpp  Olc6502.cpp  Olc6502.hpp  Opcodes.cpp  Opcodes.hpp
UT/: Olc6502Tests.cpp  main.cpp
UT/Mocks/: BusMock.hpp
